--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        ruby: ["2.7", "3.0", "3.1"]
+        ruby: ["2.7", "3.0", "3.1", "3.2"]
         bundler: [default]
         gemfile:
           - rails6.0
@@ -21,20 +21,8 @@ jobs:
           - stripe7
           - stripe8
         include:
-          - { ruby: "2.3", gemfile: "rails3.2", bundler: "1" }
-          - { ruby: "2.3", gemfile: "rails4.2", bundler: "1" }
-          - { ruby: "2.4", gemfile: "rails4.2", bundler: "1" }
-          - { ruby: "2.5", gemfile: "rails5.1", bundler: "default" }
-          - { ruby: "2.5", gemfile: "rails5.2", bundler: "default" }
-          - { ruby: "2.6", gemfile: "rails5.2", bundler: "default" }
           - { ruby: "2.6", gemfile: "rails6.0", bundler: "default" }
           - { ruby: "2.6", gemfile: "rails6.1", bundler: "default" }
-          - { ruby: "2.5", gemfile: "stripe3", bundler: "default" }
-          - { ruby: "2.6", gemfile: "stripe3", bundler: "default" }
-          - { ruby: "2.7", gemfile: "stripe3", bundler: "default" }
-          - { ruby: "2.5", gemfile: "stripe4", bundler: "default" }
-          - { ruby: "2.6", gemfile: "stripe4", bundler: "default" }
-          - { ruby: "2.7", gemfile: "stripe4", bundler: "default" }
 
     env:
       BUNDLE_GEMFILE: gemfiles/${{ matrix.gemfile }}.gemfile
