--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,5 +31,7 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby }}
           bundler-cache: true # runs `bundle install` and caches gems automatically
+      - name: Update OpenSSL
+        run: sudo apt-get install -y libssl-dev
       - name: Run tests
         run: bundle exec rake
